changed password type

--- a/loginScreen.html
+++ b/loginScreen.html
@@ -8,7 +8,7 @@
         <input type="text" id="uName"></input>
 
         <p>Password</p>
-        <input type="text" id="pWord"></input>
+        <input type="password" id="pWord"></input>
 
         <button type="submit" onclick="verifyInput()">SUBMIT</button>
         <p id="response"></p>
