in-class changes

--- a/html/oct21html.html
+++ b/html/oct21html.html
@@ -1,9 +1,9 @@
 <html>
 <head>
     <title>Muh Page</title>
-    <link href='style.css' rel='stylesheet' type='text/css'>
+    <link href="C:/Users/darrell.skogman/Documents/GitHub/javascript-examples/stylesheets/oct21style.css" rel='stylesheet' type='text/css'>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="jquery-practice.js"></script>    
+    <script src='C:/Users/darrell.skogman/Documents/GitHub/javascript-examples/scripts/oct21scripttemplate.js'></script>    
 
 </head>
 <body>
